apps/dev/auth-service/manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: auth-db
  name: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-db
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: auth-db
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: SA_PASSWORD
              value: Roxana1234
          image: mcr.microsoft.com/mssql/server:2022-latest
          name: auth-db
          ports:
            - containerPort: 1433
              protocol: TCP
      restartPolicy: Always
