apps/dev/auth-service/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: auth-service
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Production
            - name: ConnectionStrings__DefaultConnection
              value: Server=auth-db;Database=authdbser;User Id=sa;Password=Roxana1234;Encrypt=False;TrustServerCertificate=True;
            - name: RabbitMq__Host
              value: rabbitmq.rabbitmq.svc.cluster.local
          image: docker.io/huyenthai01/authentication-service:latest
          name: auth-service
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
