apps/dev/auth-service/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
  labels:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/component: backend
spec:
  type: LoadBalancer
  selector:
    app: auth
  ports:
    - name: http
      protocol: TCP
      port: 80          # publiek toegankelijke poort op de LoadBalancer
      targetPort: 80  # containerPort van de app
